@@ -61,6 +61,16 @@ debhelper (11.1) UNRELEASED; urgency=medium
     Adrian Bunk for the suggestion.  (Closes: #886127)
   * Dh_Lib.pm/dh_testroot: Support the DEB_GAIN_ROOT_CMD environment
     that replaces DPKG_GAIN_ROOT_CMD.
+  * dh_installinit/dh_installsystemd: Re-order snippets so service
+    handling is always the first to happen in removal scripts and last
+    to happen on install scripts.  This means that configuration file
+    management and systemd-tmpfiles handling will now always happen
+    before the service is started on install/upgrade.  Thanks to
+    Дилян Палаузов and Simon McVittie for reporting the bug.
+    (Closes: #885998, #885998)
+    - Note that the deprecated dh_systemd_enable and dh_systemd_start
+      helpers have not been changed.  Services handled by these may
+      still be started before configuration management happens.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
